--- a/.github/workflows/gitlab-sync.yml
+++ b/.github/workflows/gitlab-sync.yml
@@ -18,7 +18,8 @@ jobs:
           git remote remove origin
           git remote add origin https://Malavisto:${{ secrets.GH_PAT }}@github.com/Malavisto/scripts.git
 
-      - name: Push to GitHub
+      - name: Pull and Push to GitHub
         run: |
           cd gitlab-repo
-          git push -u origin --all
+          git pull origin main --rebase
+          git push -u origin main
