--- a/.github/workflows/gitlab-sync.yml
+++ b/.github/workflows/gitlab-sync.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   sync:
-    runs-on: masungulo
+    runs-on: ubuntu-latest
     steps:
       - name: Clone GitLab repository
         env:
