--- a/.github/workflows/gitlab-sync.yml
+++ b/.github/workflows/gitlab-sync.yml
@@ -17,7 +17,13 @@ jobs:
           cd gitlab-repo
           git remote remove origin
           git remote add origin https://Malavisto:${{ secrets.GH_PAT }}@github.com/Malavisto/scripts.git
-
+          
+      - name: Set Git Config
+        run: |
+          cd gitlab-repo
+          git config user.email "${GH_EMAIL}"
+          git config user.name "${GH_NAME}"
+          
       - name: Pull and Push to GitHub
         run: |
           cd gitlab-repo
