Add battery percentage configuration and enhance validation in UPS shutdown script

--- a/ups_automation/.env.example
+++ b/ups_automation/.env.example
@@ -1,3 +1,8 @@
+# Notification Configuration
 TELEGRAM_API_KEY=your_telegram_api_key
 TELEGRAM_CHAT_ID=your_chat_id
 DISCORD_WEBHOOK_URL=your_discord_webhook_url
+
+# UPS Configuration
+UPS_NAME=nutdev1
+BATTERY_PERCENT=90
